--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PERCOBAAN</title>
 </head>
 <body>
-    <h2>Hello World</h2>
+    <h2>List angka</h2>
     <ul>
         <li>Satu</li>
         <li>Dua</li>
